Year 2019 Day 3 solved